Revision history for Perl extension Otogiri-Plugin-TableInfo

{{$NEXT}}

0.03 2014-10-28T11:15:50Z

    - new feature show_views()
    - tests for show_create_view fails in FreeBSD (issue #2)

0.02 2014-10-24T15:22:17Z

    - new feature show_create_table() (alias to desc)
    - new feature show_create_view()
    - add missing dependency(DBD::SQLite)

0.01 2014-05-11T03:30:54Z

    - original version
